--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper and Scissors</title>
 </head>
 <body>
-    
+   <div class="container">
+    <div class="button-div">
+      <button onclick="Paper()">Paper</button>
+      <button onclick="Rock()">Rock</button>
+      <button onclick="Scissors()">Scissors</button>
+    </div>
+    <div class="table">Player | Comp | Winner | Player Wins | Comp Wins</div>
+   </div> 
 </body>
 <script src="script.js"></script>
 </html>
